styling music icons discoverySection in progress

--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,26 @@
                     <div class="discoverySection__icon--hiphop">
                     </div>
                 </div>
+                <div class="discoverySection__img">
+                    <div class="discoverySection__img--play"></div>
+                    <div class="discoverySection__icon--hiphop">
+                    </div>
+                </div>
+                <div class="discoverySection__img">
+                    <div class="discoverySection__img--play"></div>
+                    <div class="discoverySection__icon--hiphop">
+                    </div>
+                </div>
+                <div class="discoverySection__img">
+                    <div class="discoverySection__img--play"></div>
+                    <div class="discoverySection__icon--hiphop">
+                    </div>
+                </div>
+                <div class="discoverySection__img">
+                    <div class="discoverySection__img--play"></div>
+                    <div class="discoverySection__icon--hiphop">
+                    </div>
+                </div>
 
 
             </div>
