start styling nav layer

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,39 @@
         </header>
         <!-- end of headerSection -->
 
+        <!-- start with navSection -->
+
+        <nav class="navSection">
+
+
+            <div>
+                <div class="navSection__titles">
+                    <h2 class="navSection__h2">Festivals</h2>
+                    <h2 class="navSection__h2">Magazin</h2>
+                    <h2 class="navSection__h2">News</h2>
+                </div>
+                <div class="navSection__input">
+                    <input type="text" class="navSection__input">
+                    <button class="navSection__searchIcon"></button>
+                </div>
+                <div>icons
+                    <div>facebook</div>
+                    <div>instagram</div>
+                    <div>snapchat</div>
+                    <div>youtube</div>
+                    <div>twitter</div>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+        </nav>
+
         <!-- start with mainSection -->
         <main>
             <div class="titleSection">
