show layer with toggler function

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 
         <!-- start with navSection -->
 
-        <nav class="navSection">
+        <nav class="navSection navSection--hide" id="navSection">
 
 
             <div class="navSection__titles">
