change Menu to Schliessen with javaScript

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                         <div class="rack lower"></div>
                     </div>
                 </div>
-                <span>Menu</span>
+                <span class="headerSection__text">Menu</span>
                 <div class="headerSection__IconLike">
                     <img alt="like Icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
                 </div>
