--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,38 @@
 
                 </nav>
             </div>
+            <!-- end of navSection -->
+
+            <!-- start with loginSection -->
+            <div class="loginSection__Box">
+                <div class="loginSection__containter">
+                    <div>
+                        <div>
+                            <div>
+                                <form method="post">
+                                    <input class="loginSection__input copy" type="text" placeholder="E-Mail Adresse">
+                                </form>
+                                <form method="post">
+                                    <input class="loginSection__input copy" type="text" placeholder="Passwort">
+                                </form>
+
+                                <div>
+                                    <button class="loginSection__register copy">ANMELDEN</button>
+                                </div>
+
+                                <P class="loginSection__passwordText copy"><u class="underline">Passwort </u>vergessen?
+                                </P>
+                            </div>
+                            <p class="loginSection__text copy">Neu bei FestivalLovers?<br>
+                                jetzt <u>registrieren.</u></p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- end of loginSection -->
 
         </header>
         <!-- end of headerSection -->
