triangle for login

--- a/src/index.html
+++ b/src/index.html
@@ -206,28 +206,30 @@
             <!-- start with loginSection -->
             <div class="loginSection__Box">
                 <div class="loginSection__containter">
-                    <div>
+                    <div class="loginSection__triangleBox">
+                        <div class="loginSection__triangle"></div>
+                    </div>
+
+                    <div class="LoginSection__BoxA">
+                        <form method="post">
+                            <input class="loginSection__input copy" type="text" placeholder="E-Mail Adresse">
+                        </form>
+                        <form method="post">
+                            <input class="loginSection__input copy" type="text" placeholder="Passwort">
+                        </form>
+
                         <div>
-                            <div>
-                                <form method="post">
-                                    <input class="loginSection__input copy" type="text" placeholder="E-Mail Adresse">
-                                </form>
-                                <form method="post">
-                                    <input class="loginSection__input copy" type="text" placeholder="Passwort">
-                                </form>
-
-                                <div>
-                                    <button class="loginSection__register copy">ANMELDEN</button>
-                                </div>
-
-                                <P class="loginSection__passwordText copy"><u class="underline">Passwort </u>vergessen?
-                                </P>
-                            </div>
-                            <p class="loginSection__text copy">Neu bei FestivalLovers?<br>
-                                jetzt <u>registrieren.</u></p>
+                            <button class="loginSection__register copy">ANMELDEN</button>
                         </div>
 
+                        <P class="loginSection__passwordText copy"><u class="underline">Passwort </u>vergessen?
+                        </P>
                     </div>
+                    <div class="LoginSection__BoxB">
+                        <p class="loginSection__text copy">Neu bei FestivalLovers?<br>
+                            jetzt <u>registrieren.</u></p>
+                    </div>
+
 
                 </div>
 
