change position of triangle

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                     <!-- start with loginSection -->
 
                     <div class="loginSection__containter">
-                        <!--                        <div class="loginSection__triangle"></div>-->
+                        <div class="loginSection__triangle"></div>
 
                         <div class="LoginSection__BoxA">
                             <form method="post">
