add function togglerLogin to the login icon

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                     </svg>
                     <!-- start with loginSection -->
 
-                    <div class="loginSection__containter">
+                    <div class="loginSection__containter" id="loginSection__containter">
                         <div class="loginSection__triangle"></div>
 
                         <div class="LoginSection__BoxA">
