--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
                     </div>
                 </div>
                 <span class="headerSection__text" id="headerSection__textMenu">Menu</span>
+                <img class="headerSection__flLogo" src="images/Links/FestivalLovers_Logo.png" alt="">
                 <div class="headerSection__IconLike">
                     <svg width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -50,6 +51,7 @@
             <div class="headerSection__Icon headerSection__Icon--loginTicket">
 
                 <div class="headerSection__IconLogin">
+
                     <svg height="32px" version="1.1" viewBox="0 0 24 24" width="32px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -66,6 +68,7 @@
                             </g>
                         </g>
                     </svg>
+                    <span class="headerSection__IconLoginText">LOGIN</span>
                     <!-- start with loginSection -->
 
                     <div class="loginSection__containter" id="loginSection__containter">
@@ -113,6 +116,7 @@
                             </g>
                         </g>
                     </svg>
+                    <span class="headerSection__IconTicketText">TICKETS KAUFEN</span>
                 </div>
 
             </div>
