start with desktop title section

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,9 @@
                                 </g>
                             </g>
                         </g>
+                        <span class="headerSection__IconLoginText">LOGIN</span>
                     </svg>
-                    <span class="headerSection__IconLoginText">LOGIN</span>
+
                     <!-- start with loginSection -->
 
                     <div class="loginSection__containter" id="loginSection__containter">
@@ -246,11 +247,14 @@
         <!-- start with mainSection -->
         <main>
             <div class="titleSection">
-                <h1>Auf welche Musik stehst du?</h1>
-                <h3>Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
+                <h1 class="titleSection__h1">Auf welche Musik stehst du?</h1>
+                <h3 class="titleSection__h3">Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
                     garantieren dir eine erlebnisreiche Festivalzeit
                 </h3>
-                <button class="titleSection__btn footerLabels">FILTER ANZEIGEN</button>
+                <button class="titleSection__btn titleSection__btn--show footerLabels">FILTER ANZEIGEN</button>
+                <button class="titleSection__btn titleSection__btn--restore footerLabels">FILTER ZURÜCKSETZEN</button>
+                <button class="titleSection__btn titleSection__btn--result footerLabels">ERGEBNIS ANZEIGEN</button>
+
                 <img alt="festival picture" class="titleSection__img" src="images/Links/BigTeaser.png"
                      title="festival picture">
             </div>
