--- a/src/index.html
+++ b/src/index.html
@@ -251,9 +251,11 @@
                 <h3 class="titleSection__h3">Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
                     garantieren dir eine erlebnisreiche Festivalzeit
                 </h3>
-                <button class="titleSection__btn titleSection__btn--show footerLabels">FILTER ANZEIGEN</button>
-                <button class="titleSection__btn titleSection__btn--restore footerLabels">FILTER ZURÜCKSETZEN</button>
-                <button class="titleSection__btn titleSection__btn--result footerLabels">ERGEBNIS ANZEIGEN</button>
+                <div class="titleSection__btnBox">
+                    <button class="titleSection__btn titleSection__btn--show footerLabels">FILTER ANZEIGEN</button>
+                    <button class="titleSection__btn titleSection__btn--restore footerLabels">FILTER ZURÜCKSETZEN</button>
+                    <button class="titleSection__btn titleSection__btn--result footerLabels">ERGEBNIS ANZEIGEN</button>
+                </div>
 
                 <img alt="festival picture" class="titleSection__img" src="images/Links/BigTeaser.png"
                      title="festival picture">
