css grid for magazinSection

--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
             <div class="magazinSection">
                 <h1 class="magazinSection__h1">Magazin</h1>
                 <div class="magazinSection__container">
-                    <div class="magazineSection__box">
+                    <div class="magazineSection__box magazineSection__box--A">
                         <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
                         <p class="magazinSection__text">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -412,7 +412,7 @@
                         <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
                         <div class="magazineSection__box--border"></div>
                     </div>
-                    <div class="magazineSection__box">
+                    <div class="magazineSection__box magazineSection__box--B">
                         <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
                         <p class="magazinSection__text">
                             Mit diesen Ratschlägen habt ihr auch auf dem Festival
@@ -432,6 +432,7 @@
                         <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
                         <div class="magazineSection__box--border"></div>
                     </div>
+
 
 
 
