bannerSection added images with css

--- a/src/index.html
+++ b/src/index.html
@@ -445,8 +445,8 @@
                     <h1 class="bannerSection__title">Mit der App unabhängig am Festival feiern.</h1>
                     <button class="bannerSection__btn">APP DOWNLOADEN</button>
                     <div class="bannerSection__imgBox">
-                        <div class="bannerSection__img bannerSection__img--google">Goolgle play</div>
-                        <div class="bannerSection__img bannerSection__img--apple">App Store</div>
+                        <div class="bannerSection__img bannerSection__img--google"></div>
+                        <div class="bannerSection__img bannerSection__img--apple"></div>
                     </div>
                 </div>
             </div>
