--- a/src/index.html
+++ b/src/index.html
@@ -435,7 +435,7 @@
 
 
                 </div>
-                <button class="magazineSection__moreBtn">MEHR ANZEIGEN</button>
+                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
             </div>
 
             <div class="bannerSection">
@@ -453,36 +453,35 @@
 
             <div class="discoverySection">
 
-                <h1 class="discoverySection__h1">Entdeckungen</h1>
-                <p class="discoverySection__p lead">
+                <h1 class="discoverySection__title">Entdeckungen</h1>
+                <p class="discoverySection__intro lead">
                     Sei offen für neues und geniesse unerwartete
                     Musikerlebnisse. Höre dir
                     die Samples an und entdecke deine Leidenschaft</p>
-                <div class="discoverySection__img">
-                    <div class="discoverySection__img--play"></div>
-                    <div class="discoverySection__icon--hiphop">
+                <div class="discoverySection__imgContainer">
+                    <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
+                        <div class="discoverySection__play"></div>
+                        <audio src="music/jazz.mp3"></audio>
+                    </div>
+                    <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
+                        <div class="discoverySection__play"></div>
+                        <audio src="music/hiphop.mp3"></audio>
+                    </div>
+                    <div class="discoverySection__imgBox discoverySection__imgBox--indie">
+                        <div class="discoverySection__play"></div>
+                        <audio src="music/indie.mp3"></audio>
+                    </div>
+                    <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
+                        <div class="discoverySection__play"></div>
+                        <audio src="music/poprock.mp3"></audio>
+                    </div>
+                    <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
+                        <div class="discoverySection__play"></div>
+                        <audio src="music/electronic.mp3"></audio>
                     </div>
                 </div>
-                <div class="discoverySection__img">
-                    <div class="discoverySection__img--play"></div>
-                    <div class="discoverySection__icon--hiphop">
-                    </div>
-                </div>
-                <div class="discoverySection__img">
-                    <div class="discoverySection__img--play"></div>
-                    <div class="discoverySection__icon--hiphop">
-                    </div>
-                </div>
-                <div class="discoverySection__img">
-                    <div class="discoverySection__img--play"></div>
-                    <div class="discoverySection__icon--hiphop">
-                    </div>
-                </div>
-                <div class="discoverySection__img">
-                    <div class="discoverySection__img--play"></div>
-                    <div class="discoverySection__icon--hiphop">
-                    </div>
-                </div>
+
+                <button class="secondaryButton btnTabsHeader">MEHR SAMPLES</button>
 
 
             </div>
@@ -560,7 +559,7 @@
 
                 </div>
 
-                <button class="magazineSection__moreBtn newsSection__moreBtn--transp">MEHR ANZEIGEN</button>
+                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
 
             </div>
 
