new margin for secondary buttons

--- a/src/index.html
+++ b/src/index.html
@@ -481,7 +481,7 @@
                     </div>
                 </div>
 
-                <button class="secondaryButton btnTabsHeader">MEHR SAMPLES</button>
+                <button class="discoverySection__btn secondaryButton btnTabsHeader">MEHR SAMPLES</button>
 
 
             </div>
