--- a/src/index.html
+++ b/src/index.html
@@ -489,73 +489,79 @@
             <div class="newsSection">
                 <h1 class="newsSection__h1">NEWS</h1>
 
-                <div class="newsSection__bigBox">
-                    <img alt="festival" class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg"
-                         title="festival">
-                    <div class="newsSection__bigBox--content">
-                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                            #competition #follow @envirofoneshop
-                            and we'll announce next week #festival</P>
-                        <div class="newsSection__boxBig--icon">
-                            <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                            <span class="breadcrumbInfosDatesLikes ">13</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="newsSection__smallBox">
-                    <div class="newsSection__smallBox--content">
-                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                        <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
-                            #competition #follow @envirofoneshop
-                            and we'll announce next week #festival</P>
-                        <div class="newsSection__boxBig--icon">
-                            <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                            <span class="breadcrumbInfosDatesLikes ">13</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="newsSection__bigBox">
-                    <img alt="festival" class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg"
-                         title="festival">
-                    <div class="newsSection__bigBox--content">
-                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                            #competition #follow @envirofoneshop
-                            and we'll announce next week #festival</P>
-                        <div class="newsSection__boxBig--icon">
-                            <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                            <span class="breadcrumbInfosDatesLikes ">13</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="newsSection__smallBox">
-                    <div class="newsSection__smallBox--content">
-                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                        <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
-                            #competition #follow @envirofoneshop
-                            and we'll announce next week #festival</P>
-                        <div class="newsSection__boxBig--icon">
-                            <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                            <span class="breadcrumbInfosDatesLikes ">13</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="newsSection__bigBox">
-                    <img alt="festival" class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg"
-                         title="festival">
-                    <div class="newsSection__bigBox--content">
-                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                            #competition #follow @envirofoneshop
-                            and we'll announce next week #festival</P>
-                        <div class="newsSection__boxBig--icon">
-                            <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                <div class="newsSection__masonryBox">
+                    <div class="newsSection__bigBox">
+                        <img alt="festival" class="newsSection__boxBig--img"
+                             src="images/Links/103343561-won0.600x400.jpg"
+                             title="festival">
+                        <div class="newsSection__bigBox--content">
+                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                #competition #follow @envirofoneshop
+                                and we'll announce next week #festival</P>
+                            <div class="newsSection__boxBig--icon">
+                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
+                                <span class="breadcrumbInfosDatesLikes ">13</span>
+                            </div>
                         </div>
                     </div>
 
+                    <div class="newsSection__smallBox">
+                        <div class="newsSection__smallBox--content">
+                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                            <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
+                                #competition #follow @envirofoneshop
+                                and we'll announce next week #festival</P>
+                            <div class="newsSection__boxBig--icon">
+                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
+                                <span class="breadcrumbInfosDatesLikes ">13</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="newsSection__bigBox">
+                        <img alt="festival" class="newsSection__boxBig--img"
+                             src="images/Links/103343561-won0.600x400.jpg"
+                             title="festival">
+                        <div class="newsSection__bigBox--content">
+                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                #competition #follow @envirofoneshop
+                                and we'll announce next week #festival</P>
+                            <div class="newsSection__boxBig--icon">
+                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
+                                <span class="breadcrumbInfosDatesLikes ">13</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="newsSection__smallBox">
+                        <div class="newsSection__smallBox--content">
+                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                            <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
+                                #competition #follow @envirofoneshop
+                                and we'll announce next week #festival</P>
+                            <div class="newsSection__boxBig--icon">
+                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
+                                <span class="breadcrumbInfosDatesLikes ">13</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="newsSection__bigBox">
+                        <img alt="festival" class="newsSection__boxBig--img"
+                             src="images/Links/103343561-won0.600x400.jpg"
+                             title="festival">
+                        <div class="newsSection__bigBox--content">
+                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                #competition #follow @envirofoneshop
+                                and we'll announce next week #festival</P>
+                            <div class="newsSection__boxBig--icon">
+                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
+                                <span class="breadcrumbInfosDatesLikes ">13</span>
+                            </div>
+                        </div>
+
+
+                    </div>
 
                 </div>
 
@@ -572,22 +578,6 @@
                 <li>FESTIVAL</li>
                 <li>MAGAZIN</li>
                 <li>NEWS</li>
-                <li>
-                    <svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
-                         xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                        <title>navigation_backtotop</title>
-                        <desc>Created with Sketch.</desc>
-                        <defs></defs>
-                        <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
-                            <g fill="#000000" id="navigation_backtotop" transform="translate(-12.000000, -12.000000)">
-                                <g id="Shape" transform="translate(12.000000, 12.000000)">
-                                    <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
-                                </g>
-                            </g>
-                        </g>
-                    </svg>
-                </li>
             </ul>
             <ul class="footerSection__box2">
                 <li>
@@ -676,6 +666,26 @@
                     </svg>
                 </li>
             </ul>
+
+            <div class="footerSection__box3">
+                <div>BACK TO TOP</div>
+
+                    <svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
+                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                        <title>navigation_backtotop</title>
+                        <desc>Created with Sketch.</desc>
+                        <defs></defs>
+                        <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
+                            <g fill="#000000" id="navigation_backtotop" transform="translate(-12.000000, -12.000000)">
+                                <g id="Shape" transform="translate(12.000000, 12.000000)">
+                                    <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+
+            </div>
 
 
         </footer>
