work on position

--- a/src/index.html
+++ b/src/index.html
@@ -486,88 +486,88 @@
 
             </div>
 
-            <div class="newsSection">
-                <h1 class="newsSection__h1">NEWS</h1>
+<!--            <div class="newsSection">-->
+<!--                <h1 class="newsSection__h1">NEWS</h1>-->
 
-                <div class="newsSection__masonryBox">
-                    <div class="newsSection__bigBox">
-                        <img alt="festival" class="newsSection__boxBig--img"
-                             src="images/Links/103343561-won0.600x400.jpg"
-                             title="festival">
-                        <div class="newsSection__bigBox--content">
-                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                #competition #follow @envirofoneshop
-                                and we'll announce next week #festival</P>
-                            <div class="newsSection__boxBig--icon">
-                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                                <span class="breadcrumbInfosDatesLikes ">13</span>
-                            </div>
-                        </div>
-                    </div>
+<!--                <div class="newsSection__masonryBox">-->
+<!--                    <div class="newsSection__bigBox">-->
+<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
+<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
+<!--                             title="festival">-->
+<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
+<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
+<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
+<!--                                #competition #follow @envirofoneshop-->
+<!--                                and we'll announce next week #festival</P>-->
+<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
+<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
+<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <div class="newsSection__smallBox">
-                        <div class="newsSection__smallBox--content">
-                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                            <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
-                                #competition #follow @envirofoneshop
-                                and we'll announce next week #festival</P>
-                            <div class="newsSection__boxBig--icon">
-                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                                <span class="breadcrumbInfosDatesLikes ">13</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="newsSection__bigBox">
-                        <img alt="festival" class="newsSection__boxBig--img"
-                             src="images/Links/103343561-won0.600x400.jpg"
-                             title="festival">
-                        <div class="newsSection__bigBox--content">
-                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                #competition #follow @envirofoneshop
-                                and we'll announce next week #festival</P>
-                            <div class="newsSection__boxBig--icon">
-                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                                <span class="breadcrumbInfosDatesLikes ">13</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="newsSection__smallBox">
-                        <div class="newsSection__smallBox--content">
-                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                            <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
-                                #competition #follow @envirofoneshop
-                                and we'll announce next week #festival</P>
-                            <div class="newsSection__boxBig--icon">
-                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                                <span class="breadcrumbInfosDatesLikes ">13</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="newsSection__bigBox">
-                        <img alt="festival" class="newsSection__boxBig--img"
-                             src="images/Links/103343561-won0.600x400.jpg"
-                             title="festival">
-                        <div class="newsSection__bigBox--content">
-                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                            <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                #competition #follow @envirofoneshop
-                                and we'll announce next week #festival</P>
-                            <div class="newsSection__boxBig--icon">
-                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">
-                                <span class="breadcrumbInfosDatesLikes ">13</span>
-                            </div>
-                        </div>
+<!--                    <div class="newsSection__smallBox">-->
+<!--                        <div class="newsSection__smallBox&#45;&#45;content">-->
+<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
+<!--                            <P class="newsSection__smallBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
+<!--                                #competition #follow @envirofoneshop-->
+<!--                                and we'll announce next week #festival</P>-->
+<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
+<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
+<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="newsSection__bigBox">-->
+<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
+<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
+<!--                             title="festival">-->
+<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
+<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
+<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
+<!--                                #competition #follow @envirofoneshop-->
+<!--                                and we'll announce next week #festival</P>-->
+<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
+<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
+<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="newsSection__smallBox">-->
+<!--                        <div class="newsSection__smallBox&#45;&#45;content">-->
+<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
+<!--                            <P class="newsSection__smallBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
+<!--                                #competition #follow @envirofoneshop-->
+<!--                                and we'll announce next week #festival</P>-->
+<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
+<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
+<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="newsSection__bigBox">-->
+<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
+<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
+<!--                             title="festival">-->
+<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
+<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
+<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
+<!--                                #competition #follow @envirofoneshop-->
+<!--                                and we'll announce next week #festival</P>-->
+<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
+<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
+<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
 
-                    </div>
+<!--                    </div>-->
 
-                </div>
+<!--                </div>-->
 
-                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
+<!--                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>-->
 
-            </div>
+<!--            </div>-->
 
             <!-- end of mainSection -->
         </main>
@@ -668,7 +668,7 @@
             </ul>
 
             <div class="footerSection__box3">
-                <div>BACK TO TOP</div>
+                <div class="footerSection__text">BACK TO TOP</div>
 
                     <svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
