--- a/src/index.html
+++ b/src/index.html
@@ -668,9 +668,9 @@
             </ul>
 
             <div class="footerSection__box3">
-                <div class="footerSection__text">BACK TO TOP</div>
+                <div class="footerSection__text footerSection__text--position">BACK TO TOP</div>
 
-                    <svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
                         <title>navigation_backtotop</title>
