--- a/src/index.html
+++ b/src/index.html
@@ -486,88 +486,93 @@
 
             </div>
 
-<!--            <div class="newsSection">-->
-<!--                <h1 class="newsSection__h1">NEWS</h1>-->
+            <div class="newsSection">
+                <h1 class="newsSection__h1">NEWS</h1>
 
-<!--                <div class="newsSection__masonryBox">-->
-<!--                    <div class="newsSection__bigBox">-->
-<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
-<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
-<!--                             title="festival">-->
-<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
-<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
-<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
-<!--                                #competition #follow @envirofoneshop-->
-<!--                                and we'll announce next week #festival</P>-->
-<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
-<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
-<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                <div class="newsSection__container">
 
-<!--                    <div class="newsSection__smallBox">-->
-<!--                        <div class="newsSection__smallBox&#45;&#45;content">-->
-<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
-<!--                            <P class="newsSection__smallBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
-<!--                                #competition #follow @envirofoneshop-->
-<!--                                and we'll announce next week #festival</P>-->
-<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
-<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
-<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="newsSection__bigBox">-->
-<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
-<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
-<!--                             title="festival">-->
-<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
-<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
-<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
-<!--                                #competition #follow @envirofoneshop-->
-<!--                                and we'll announce next week #festival</P>-->
-<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
-<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
-<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="newsSection__smallBox">-->
-<!--                        <div class="newsSection__smallBox&#45;&#45;content">-->
-<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
-<!--                            <P class="newsSection__smallBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
-<!--                                #competition #follow @envirofoneshop-->
-<!--                                and we'll announce next week #festival</P>-->
-<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
-<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
-<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="newsSection__bigBox">-->
-<!--                        <img alt="festival" class="newsSection__boxBig&#45;&#45;img"-->
-<!--                             src="images/Links/103343561-won0.600x400.jpg"-->
-<!--                             title="festival">-->
-<!--                        <div class="newsSection__bigBox&#45;&#45;content">-->
-<!--                            <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>-->
-<!--                            <P class="newsSection__bigBox&#45;&#45;content&#45;&#45;content copy">#festivallovers are you ready for a-->
-<!--                                #competition #follow @envirofoneshop-->
-<!--                                and we'll announce next week #festival</P>-->
-<!--                            <div class="newsSection__boxBig&#45;&#45;icon">-->
-<!--                                <img alt="like icon" src="images/Icons/detail_like_filled.svg" title="like Icon">-->
-<!--                                <span class="breadcrumbInfosDatesLikes ">13</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                    <div class="newsSection__Box">
+                        <div class="newsSection__pic"></div>
+                        <div class="newsSection__content">
+                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
+                            <div class="newsSection__intro copy">
+                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll announce next week #festival
+                            </div>
+                            <div class="newsSection__like">
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty">15</span>
+                            </div>
+                        </div>
 
 
-<!--                    </div>-->
+                    </div>
 
-<!--                </div>-->
+                    <div class="newsSection__Box">
+                        <div class="newsSection__pic"></div>
+                        <div class="newsSection__content">
+                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
+                            <div class="newsSection__intro copy">
+                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll announce next week #festival
+                            </div>
+                            <div class="newsSection__like">
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty">15</span>
+                            </div>
+                        </div>
 
-<!--                <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>-->
 
-<!--            </div>-->
+                    </div>
+                    <div class="newsSection__Box">
+                        <div class="newsSection__pic"></div>
+                        <div class="newsSection__content">
+                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
+                            <div class="newsSection__intro copy">
+                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll announce next week #festival
+                            </div>
+                            <div class="newsSection__like">
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty">15</span>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="newsSection__Box">
+                        <div class="newsSection__pic"></div>
+                        <div class="newsSection__content">
+                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
+                            <div class="newsSection__intro copy">
+                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll announce next week #festival
+                            </div>
+                            <div class="newsSection__like">
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty">15</span>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="newsSection__Box">
+                        <div class="newsSection__pic"></div>
+                        <div class="newsSection__content">
+                            <div class="newsSection__date breadcrumbInfosDatesLikes">3. Jun 2016</div>
+                            <div class="newsSection__intro copy">
+                                #festivallovers are you ready for a #competition #follow @envirofoneshop and we’ll announce next week #festival
+                            </div>
+                            <div class="newsSection__like">
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty">15</span>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+                <button class="newsSection__btn secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
+
+            </div>
 
             <!-- end of mainSection -->
         </main>
@@ -670,20 +675,21 @@
             <div class="footerSection__box3">
                 <div class="footerSection__text footerSection__text--position">BACK TO TOP</div>
 
-                    <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg"
-                         xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                        <title>navigation_backtotop</title>
-                        <desc>Created with Sketch.</desc>
-                        <defs></defs>
-                        <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
-                            <g fill="#000000" id="navigation_backtotop" transform="translate(-12.000000, -12.000000)">
-                                <g id="Shape" transform="translate(12.000000, 12.000000)">
-                                    <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
-                                </g>
+                <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
+                     xmlns="http://www.w3.org/2000/svg"
+                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                    <title>navigation_backtotop</title>
+                    <desc>Created with Sketch.</desc>
+                    <defs></defs>
+                    <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
+                        <g fill="#000000" id="navigation_backtotop" transform="translate(-12.000000, -12.000000)">
+                            <g id="Shape" transform="translate(12.000000, 12.000000)">
+                                <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
                             </g>
                         </g>
-                    </svg>
+                    </g>
+                </svg>
 
             </div>
 
