implement grid for title section finished

--- a/src/index.html
+++ b/src/index.html
@@ -128,9 +128,9 @@
 
 
                 <div class="navSection__titles">
-                    <h1 class="navSection__h2">Festivals</h1>
-                    <h1 class="navSection__h2">Magazin</h1>
-                    <h1 class="navSection__h2">News</h1>
+                    <h1 class="navSection__title navSection__title--1">Festivals</h1>
+                    <h1 class="navSection__title navSection__title--2">Magazin</h1>
+                    <h1 class="navSection__title navSection__title--3">News</h1>
                 </div>
                 <div class="navSection__BoxB">
                     <div class="navSection__input">
