--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                         <div class="rack lower"></div>
                     </div>
                 </div>
-                <span class="headerSection__text " id="headerSection__textMenu">Menu</span>
+                <span class="headerSection__text" id="headerSection__textMenu">Menu</span>
                 <img alt="" class="headerSection__flLogo" src="images/Links/FestivalLovers_Logo.png">
                 <div class="headerSection__IconLike">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
@@ -128,9 +128,11 @@
 
 
                 <div class="navSection__titles">
-                    <h1 class="navSection__title navSection__title--1">Festivals</h1>
-                    <h1 class="navSection__title navSection__title--2">Magazin</h1>
-                    <h1 class="navSection__title navSection__title--3">News</h1>
+
+                    <a class=" titles navSection__title navSection__title--1">Festivals</a>
+                    <a href="#magazinSection" class=" titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="#newsSection" class=" titles navSection__title navSection__title--3">News</a>
+
                 </div>
                 <div class="navSection__BoxB">
                     <div class="navSection__input">
@@ -368,7 +370,7 @@
                 <img alt="festival picture" class="titleSection__img" src="images/Links/BigTeaser.png"
                      title="festival picture">
             </div>
-            <div class="magazinSection">
+            <div class="magazinSection" id="magazinSection">
                 <h1 class="magazinSection__h1">Magazin</h1>
                 <div class="magazinSection__container">
                     <div class="magazineSection__box magazineSection__box--A">
@@ -488,7 +490,7 @@
 
             </div>
 
-            <div class="newsSection">
+            <div class="newsSection" id="newsSection">
                 <h1 class="newsSection__h1">NEWS</h1>
 
                 <div class="newsSection__container">
